# openstack-spec-tracker

./: .gitignore  CONTRIBUTING.rst  HACKING.rst  README.rst  generate_static_html.py  requirements.txt  setup.cfg  spectracker.yaml.sample  test-requirements.txt  tox.ini
spectracker/: blueprint.py  contributors.py  pagerender.py  specification.py  specparser.py
spectracker/tests/: test_specparser.py
templates/: keytopics.html  specifications.html
